--- a/src/index.css
+++ b/src/index.css
@@ -17,12 +17,12 @@ body{
 
 
 .glow {
-  text-shadow: 0 0 10px #000, 0 0 20px #fff, 0 0 30px #000, 0 0 40px rgb(255, 0, 0), 0 0 80px rgb(248, 37, 0), 0 0 100px rgb(251, 255, 0), 0 0 150px rgb(255, 49, 49);
+  text-shadow: 0 0 10px #000, 0 0 20px #000, 0 0 30px #000, 0 0 40px rgb(241, 92, 92), 0 0 80px rgb(241, 92, 92), 0 0 100px rgb(241, 92, 92), 0 0 150px rgb(241, 92, 92);
 }
 
 .glowtwo {
-  text-shadow: 0 0 10px #000, 0 0 20px #fff, 0 0 30px #000, 0 0 40px rgb(17, 0, 255),
-  0 0 70px rgb(0, 4, 255), 0 0 80px rgb(0, 17, 248), 0 0 100px rgb(0, 247, 255), 0 0 150px rgb(14, 0, 136);
+  text-shadow: 0 0 10px #000, 0 0 20px #000, 0 0 30px #000, 0 0 40px rgb(17, 0, 255),
+  0 0 70px rgb(101, 103, 255), 0 0 80px rgb(101, 103, 255), 0 0 100px rgb(101, 103, 255), 0 0 150px rgb(101, 103, 255);
 }
 
 .black-glow {
